src/objects/DD_Provider_Services__c.object
<CustomObject>
    <fields>
        <fullName>DD_End_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Services</relationshipLabel>
        <relationshipName>DD_Provider_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_Service__c</fullName>
        <label>Service</label>
        <referenceTo>DD_Service_Taxonomy__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>DD_Prov_Services_Tax</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Provider Service</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Provider Services Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>